intro spacing fixed

--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -1,6 +1,6 @@
 .intro {
-  margin: 92px auto 0;
-  padding: 0 0 118px 0;
+  margin: 118px auto 0;
+  padding: 0 0 92px 0;
   max-width: 984px;
   width: 100%;
   display: grid;
